# glass

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  SKILL.md  VISION.md  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml
assets/: aesthetic.css
docs/: architecture.md  deployment.md  synthesis-endpoint-contract.md
explorations/lab-001/: aesthetic.css  app.js  data.js  fonts.css  frame.css  frame.html  frame.js  index.html  parts.js  styles.css
explorations/lab-001/sections/: needs-clips.js  now-wire.js  r2-agent.js  r2-now-wire.js  r2-report.js  r2-shell.js  r3-doc-a.js  r3-doc-b.js  reports.js  shell-agent.js
scripts/: check.sh  coverage.sh  e2e-server.sh  e2e.sh
site/: DESIGN.md  changelog.html  features.html  get-started.html  index.html  marketing.css
src/: backlog_report.rs  canary.rs  lib.rs  main.rs  needs_you.rs  rep1.rs  report_components.rs  reports.rs  review_report.rs  shell.rs  window_report.rs
tests/: cli.rs  protocol.rs
tests/e2e/: glass.spec.ts
tests/e2e/fixtures/: seed-surfaces.json
tests/e2e/support/: mock-powder.mjs
