[package]
name = "glass"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
hex = "0.4"
http-body-util = "0.1"
mime = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower = "0.5"
