[package]
name = "glass"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
chrono = "0.4"
# glass-913 (REP-1): the shared two-tier report component catalog, pinned to
# the exact rev fleet-retro consumes (aesthetic-926's own convention) so
# Glass never grows a second hand-rolled report renderer.
glance-catalog = { git = "https://github.com/misty-step/glance", rev = "b670c63560ef5ae55f72f08549f5875e6ca3fe51" }
hex = "0.4"
http-body-util = "0.1"
mime = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["catch-panic"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ureq = { version = "3.2.0", features = ["json"] }
